--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,48 @@
   .App-logo {
     animation: App-logo-float infinite 3s ease-in-out;
   }
+
+  .App {
+    text-align: center;
+  }
+
+  .App-logo {
+    height: 40vmin;
+    pointer-events: none;
+  }
+
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-float infinite 3s ease-in-out;
+    }
+  }
+
+  .App-header {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+  }
+
+  .App-link {
+    color: rgb(112, 76, 182);
+  }
+
+  @keyframes App-logo-float {
+    0% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(10px)
+    }
+
+    100% {
+      transform: translateY(0px)
+    }
+  }
 }
 
 .App-header {
@@ -30,10 +72,45 @@
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(10px);
   }
+
   100% {
     transform: translateY(0px);
   }
+}
+
+h1,
+p {
+  font-family: Lato;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  position: relative;
+}
+
+thead tr th {
+  font-weight: 500;
+  text-align: left;
+  background-color: #fafafa;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #fafafa;
+}
+
+th,
+td {
+  padding: 8px;
+  overflow-wrap: break-word;
+}
+
+.pagination-bar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
